# tight_isoperimetric

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  plot.py
data/: holes_example.wkt
src/: Arr_circle_segment_traits_2_custom.h  area_of_general_polygon.cpp  fig4_data.wkt  geometry.cpp  geometry.hpp  main.cpp  misc-junk-code.cpp  test.cpp
